--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </button>
 
                 <div class="logo">
-                    M<span class="color">S</span>
+                    S<span class="color">P</span>
                 </div>
                 
             </header>
